[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Healthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://UI/Staminabar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tilesheets/images/colored_transparent_packed_215.png" type="Texture" id=4]
[ext_resource path="res://UI/Font/manaspc.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_bottom = -2
font_data = ExtResource( 5 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarContainer" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 44.0
custom_constants/separation = -10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" parent="BarContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 27.0
rect_min_size = Vector2( 60, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Staminabar" parent="BarContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GoldContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 20.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldTexture" type="TextureRect" parent="GoldContainer"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="GoldContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 28.0
margin_bottom = 15.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
